fix title align

--- a/css/main.css
+++ b/css/main.css
@@ -728,7 +728,6 @@ a {
   font-size: 42px;
   line-height: 1.16;
   letter-spacing: 0.05em;
-  text-align: center;
   color: #FFFFFF;
   margin-top: 20px;
 }
@@ -829,7 +828,6 @@ a {
   font-size: 42px;
   line-height: 1.16;
   letter-spacing: 0.05em;
-  text-align: center;
   margin-top: 20px;
   text-align: left;
 }
@@ -1231,8 +1229,8 @@ a {
   font-size: 42px;
   line-height: 1.16;
   letter-spacing: 0.05em;
-  text-align: center;
   color: #FFFFFF;
+  text-align: center;
 }
 
 .reservation__form {
@@ -1382,8 +1380,8 @@ a {
   font-size: 42px;
   line-height: 1.16;
   letter-spacing: 0.05em;
-  text-align: center;
   color: #FFFFFF;
+  text-align: center;
 }
 
 .contact__wrapper {
