--- a/sass/components/_reservation.scss
+++ b/sass/components/_reservation.scss
@@ -17,6 +17,7 @@
 .reservation__title{
     @include title;
     color: getColor("light-color");
+    text-align: center;
 }
 
 .reservation__form{
