--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -26,7 +26,6 @@
     font-size: 42px;
     line-height: 1.16;
     letter-spacing: 0.05em;
-    text-align: center;
 }
 
 
